Changed the return value of the function in case of success
